tests/errors/scope_undefined_var_err/scope_undefined_var_err.c
#error scope_undefined_var_err.scope_undefined_var_err:6:11 The name 'undefinedVar' here should denote to some value; but not found.
